add permission for recomputing summary attribute. fixes #55
Note: to include permission in the database, you may need to add
the --all option to syncdb. e.g.
./manage.py syncdb --all --settings=h1ds.settings_development

This is due to a bug where South doesn't track permissions changes
ref: http://south.aeracode.org/ticket/211

--- a/h1ds_summary/templates/h1ds_summary/summary_table.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_table.html
@@ -9,7 +9,7 @@
 <tr>
 {% for d in drow %}
 {% if forloop.first %}
-<td>{{d.0}}</td>
+<td>{{d.0}} {% if perms.h1ds_summary.recompute_summaryattribute %} &#x27F3; {% endif %}</td>
 {% else %}
 <td><a href="{% url summary-go-to-source d.1 drow.0.0 %}">{{d.0}}</a></td>
 {% endif %}
