alert user if their username needs changing to CamelCase. fixes #16
this won't display in the wiki header, but rather than create an additional
hack for the wiki, I've opened a new issue for a better fix: see #59

--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -517,6 +517,7 @@ h3 { font-size:120%; font-family: Georgia, Times, "Times New Roman", serif;}
     width:100%;
 }
 
+
 .fixed-centre {
     width:320px;
     margin:auto;
@@ -1207,6 +1208,14 @@ table.data {
 
 table.side-table {
     width: 100%;
+}
+
+form.inline {
+    display: inline;
+}
+
+form.right {
+    float: right;
 }
 
 /* ============================================================
