add separate permission for raw SQL access. fixes #58
    Note: to include permission in the database, you may need to add
    the --all option to syncdb. e.g.
    ./manage.py syncdb --all --settings=h1ds.settings_development

    This is due to a bug where South doesn't track permissions changes
    ref: http://south.aeracode.org/ticket/211

--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </div>
-{% if perms.h1ds_summary.add_summaryattribute %}
+{% if perms.h1ds_summary.raw_sql_query_summaryattribute %}
   <div class="portlet" id="summary-portlet-sql">
     <div class="portlet-header">SQL query</div>
     <div class="portlet-content">
