--- a/h1ds_core/templates/h1ds_core/userprofile.html
+++ b/h1ds_core/templates/h1ds_core/userprofile.html
@@ -1,6 +1,7 @@
-{% extends "h1ds_core/base_single_col.html" %}
+{% extends "h1ds_core/base.html" %}
 
-{% block content %}
+{% block full_content %}
+<div id="full-content" class="clearfix">
 <h2>Profile</h2>
 <div class="prefform">
 <form action="{{return_url}}" method="post">{% csrf_token %}
@@ -11,5 +12,6 @@
 <h2>Wiki settings</h2>
 <div class="prefform">
 <p><a href="/wiki/?action=userprefs&sub=prefs">Click here to edit your wiki settings.</a></p>
+</div>
 </div>
 {% endblock %}
