add template tag for displaying config files

--- a/h1ds_configdb/templates/h1ds_configdb/base.html
+++ b/h1ds_configdb/templates/h1ds_configdb/base.html
@@ -16,7 +16,7 @@
     </div>
   </div>
 </div>
-
+<div class="column w80" id="configdb-column-data">
 {% block configdb_content %}{% endblock %}
-
+</div>
 {% endblock %}
