--- a/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
@@ -1,7 +1,40 @@
 {% extends "h1ds_configdb/base.html"%}
 
+{% load configdb_display %}
+
 {% block configdb_content %}
 
-{{ config_files }}
+<div class="pagination">
+    <span class="step-links">
+        {% if config_files.has_previous %}
+            <a href="?page={{ config_files.previous_page_number }}">previous</a>
+        {% endif %}
 
+        <span class="current">
+            Page {{ config_files.number }} of {{ config_files.paginator.num_pages }}.
+        </span>
+
+        {% if config_files.has_next %}
+            <a href="?page={{ config_files.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
+{% for dbfile in config_files.object_list %}
+{% show_configfile dbfile %}
+{% endfor %}
+<div class="pagination">
+    <span class="step-links">
+        {% if config_files.has_previous %}
+            <a href="?page={{ config_files.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ config_files.number }} of {{ config_files.paginator.num_pages }}.
+        </span>
+
+        {% if config_files.has_next %}
+            <a href="?page={{ config_files.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
