--- a/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
@@ -4,6 +4,8 @@
 
 {% block configdb_content %}
 
+Number of results: {{ n_files }}
+
 <div class="pagination">
     <span class="step-links">
         {% if config_files.has_previous %}
