--- a/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
@@ -1,4 +1,4 @@
-<div class="h1ds-configdb-configfile">
+<div class="h1ds-configdb-configfile mbox clearfix">
 <h2>{{name}}</h2>
 <ul>
   {% for p in properties %}
