use filefield for configdb file

--- a/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
@@ -1,5 +1,5 @@
 <div class="h1ds-configdb-configfile mbox clearfix">
-<h2>{{name}}</h2>
+<a href="{{ file_url }}"><h2>{{name}}</h2></a>
 <ul>
   {% for p in properties %}
   <li><strong>{{p.0}}</strong>: {{p.1}}
