--- a/h1ds_configdb/templates/h1ds_configdb/base.html
+++ b/h1ds_configdb/templates/h1ds_configdb/base.html
@@ -2,14 +2,12 @@
 
 {% block content %}
 <div class="column w20 clearfix" id="configdb-column-left">
-  <!--  This generates  the 'select  shot'  form in  the top  left of  the
-	page. -->
   <div class="portlet" id="configdb-portlet-seletion">
     <div class="portlet-header">select config</div>
     <div class="portlet-content">
       <div class="sidebarcontent">
 	<form action="" method="post">{% csrf_token %}
-	  {{ form }}
+	  {{ form.as_p }}
 	  <input type=submit>
 	</form>
       </div>
