--- a/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_display.html
@@ -1,5 +1,5 @@
 <div class="h1ds-configdb-configfile mbox clearfix">
-<a href="{{ file_url }}"><h2>{{name}}</h2></a>
+<h2><a href="{{ file_url }}">{{name}}</a></h2>
 <ul>
   {% for p in properties %}
   <li><strong>{{p.0}}</strong>: {{p.1}}
