css for my signals portlet. refs #63

--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -1173,6 +1173,14 @@ span.right {
     float:right;
 }
 
+.sidebar-section-item {
+    padding: 0.4em;
+}
+.sidebar-section-item-delete {
+    display:inline;
+    float:right;
+}
+
 #mds-shot-previous {
     width:33%;
     display:inline;
