--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -1176,6 +1176,14 @@ span.right {
 .sidebar-section-item {
     padding: 0.4em;
 }
+
+.sidebar-section-item-edit {
+    padding-right: 0.2em;
+    padding-left: 0.2em;
+    display:inline;
+    float:right;
+}
+
 .sidebar-section-item-delete {
     display:inline;
     float:right;
