add json response. refs #74

--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -3,6 +3,7 @@
 {% load templatetable %}
 
 {% block content %}
+<div id="poll-summarydb-server" style="display: none;">{{ poll_server}}</div>
 <div class="column w80">
   <div class="portlet" id="summary-portlet-data">
     <div class="portlet-header">summary data</div>
