sort summary attributes in sidebar by alphabet columns

--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -18,7 +18,7 @@
     <div class="portlet-content">
       <div class="sidebarcontent">
 	<table width="100%" class="side-table">
-	  {% table item excluded_attrs 2 %}
+	  {% colsorttable item excluded_attrs 2 %}
 	  {% if table.startrow %}
 	  {% if table.oddrow %}
 	  <tr class="highlight">
