--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -23,7 +23,7 @@
     <header class="clearfix">
       <div class="fixed-centre">
 	<div id="loginlinks">
-	  {% if user.is_authenticated %}{{ user.username }}{% if "openiduser" in user.username %} <a class="warning" href="/user/settings/{{user.username}}">(please click here to change your username)</a>{% endif %} // <a href="/user/settings/{{user.username}}">settings</a> // <a href="{% url h1ds-logout %}">log out</a> 
+	  {% if user.is_authenticated %}{{ user.username }}{% if "openiduser" in user.username %} <a class="warning" href="/user/settings/{{user.username}}">(please click here to change your username)</a>{% endif %} // <a href="/user/settings/{{user.username}}">settings</a> // <a href="{% url "h1ds-logout" %}">log out</a> 
 	  {% else %}<a href="/openid/login?next={{ request.get_full_path }}">log in</a>
 	  {% endif %}
 	</div>
