--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -75,6 +75,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
+
+  {% google_tracker %}
   
 </body>
 </html>
