progress in extracting mds-specific code

--- a/h1ds_core/templates/h1ds_core/no_trees_found.html
+++ b/h1ds_core/templates/h1ds_core/no_trees_found.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_mdsplus/mdsplus_base.html" %}
+{% extends "h1ds_mdsplus/base_node.html" %}
 
 {% block warning %}
 <div class="fixed-centre">
