--- a/h1ds_core/templates/h1ds_core/base_node.html
+++ b/h1ds_core/templates/h1ds_core/base_node.html
@@ -1,163 +1,194 @@
-{% extends "h1ds_mdsplus/mdsplus_base.html" %}
+{% extends "h1ds_core/base.html" %}
 
+<!-- This loads the 'display_data' and 'show_filter' template tags, used
+for displaying mds data and H1DS data filters in the template. -->
+{% load mdsdata %}
+
+<!-- This loads the 'table' template tag, used for dynamic generation of
+HTML tables. -->
 {% load templatetable %}
-{% block leftpanel %}
-<div class="mbox">
-<div class="sidebarcontent">
-<FORM action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
-    <span class="left">select shot</span>
-    <span class="right">
-    <INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
-    <INPUT type="text" size=5 id="requested-shot" name="go_to_shot">
-    <INPUT title="go to shot" type="submit" value="&#x21b5;"></span>
- </FORM>
-</div>
-<div class="mbox">
-<h3>children</h3>
-<table width="100%" class="side-table">
-  {% table item children 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="{{item.1}}">{{item.0}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-</div>
-<div class="mbox">
-<h3>members</h3>
-<table width="100%" class="side-table">
-  {% table item members 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="{{item.1}}">{{item.0}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-</div>
-<div class="mbox">
-<h3>tags</h3>
-<table width="100%" class="side-table">
-  {% table item tagnames 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="{{item.1}}">{{item.0}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-</div>
-<div class="mbox">
-<h3>trees</h3>
-<table width="100%" class="side-table">
-  {% table item treelinks 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="{{item.1}}">{{item.0}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-</div>
-</div>
-{% endblock %}
 
-
-{% block mdscontent %}
-<div class="mbox">
-<div class="centreinfobox"><span class="right"><strong>{{path_breadcrumbs|safe}}</strong></span>
-<span class="left">	<FORM action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
-<INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
-	    <INPUT type="hidden" name="go_to_shot" value="{{shot|add:'-1'}}">
-	    <INPUT title="go to shot" type="submit" value="<">
-	</FORM></span>
-<span class="left paddedtext"><strong> {{shot}} </strong></span>
-
-<span class="left">	<FORM action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
+{% block extrahead %}
+{% for name, content in html_metadata.items %}
+<meta name="{{name}}" content="{{content}}" />{% endfor%}{% endblock%}
+<div class="fixed-centre">
+{% block content %}
+<div class="column w20" id="mds-column-left">
+  <!--  This generates  the 'select  shot'  form in  the top  left of  the
+	page. -->
+  <div class="portlet" id="mds-portlet-shot">
+    <div class="portlet-header">shot</div>
+    <div class="portlet-content">
+      <div id="mds-shot-controller">
+	<div class="sidebarcontent">
+	  <FORM class="inline-form" action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
 	    <INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
-	    <INPUT type="hidden" name="go_to_shot" value="{{shot|add:'1'}}">
-	    <INPUT title="go to shot" type="submit" value=">">
-	</FORM></span>
+	    <INPUT type="text" id="requested-shot" name="go_to_shot" placeholder="shot #" size="8">
+	  </FORM>
+	</div>
+	<div class="sidebarcontent">
+	  <div id="mds-shot-previous">	<FORM action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
+	      <INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
+	      <INPUT type="hidden" name="go_to_shot" value="{{mdsnode.shot|add:'-1'}}">
+	      <INPUT title="go to shot" type="submit" value="<">
+	    </FORM>
+	  </div>
+	  <div id="mds-shot-current"><strong> {{mdsnode.shot}} </strong></div>
+	  <div id="mds-shot-next">	
+	    <FORM action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
+	      <INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
+	      <INPUT type="hidden" name="go_to_shot" value="{{mdsnode.shot|add:'1'}}">
+	      <INPUT title="go to shot" type="submit" value=">">
+	    </FORM>
+	  </div>
+	</div>
+      </div>
+      <div id="mds-track-latest-shot"></div>
+      <div id="mds-toggle-track-latest-shot"></div>
+    </div>
+  </div>
+
+
+  <!--  Generate  a  table  with  links to  mdsplus  trees  recognised  by
+	H1DS. -->
+  <div class="portlet" id="mds-portlet-trees">
+    <div class="portlet-header">navigation</div>
+    <div class="portlet-content">
+      <ul>
+	<!-- current tree -->
+	{% for a in node.get_ancestors %}
+	<li class="treenode"><a href="{{a.url_processor.get_url}}">{{ a.get_short_name }}</a><ul>
+	{% endfor %}
+	<li class="treenode current">{{ node.get_short_name }}
+	  <ul>
+	  {% for c in node.get_children %}
+	  <li> <a href="{{c.url_processor.get_url}}">{{ c.get_short_name }}</a> </li>
+	  {% endfor %}
+	  </ul>
+	  {% for i in node.get_ancestors %}</ul>{% endfor %}
+	</li>
+	{% for t in trees.other %}
+	<li class="datatree">{{ t }}</li>
+	{% endfor%}
+      </ul>
+    </div>
+  </div>
 </div>
-{% block node_error %}{% endblock %}
-{% block node_data %}
+
+
+<!-- *************************************************************** -->
+<!-- ****** MDSplus data ******************************************* -->
+<!-- *************************************************************** -->
+
+
+<div class="column w60" id="mds-column-centre">
+  <div class="portlet" id="mds-portlet-path">
+    <div class="portlet-header">path</div>
+    <div class="portlet-content">{{mdsnode.path_breadcrumbs|safe}}</div>
+    {% block node_error %}{% endblock node_error %}
+  </div>
+  <div class="portlet" id="mds-portlet-data">
+    <div class="portlet-header">data</div>
+    <div class="portlet-content">
+      {% block node_data %}{% endblock node_data %}
+    </div>
+  </div> <!-- end portlet -->
+</div> <!-- end column -->
+
+
+
+<!-- *************************************************************** -->
+<!-- ****** Right panel ******************************************** -->
+<!-- *************************************************************** -->
+
+
+<div class="column w20" id="mds-column-right">
+  <!-- If there is a summary data (SQL) dtype associated with the filtered
+       data then display a form for adding the data to the summary database -->
+  {% if perms.h1ds_summary.add_summaryattribute %}
+  {% if mdsnode.data.summary_dtype %}
+  <div class="portlet" id="mds-portlet-summarydb">
+    <div class="portlet-header">add to summary db</div>
+    <div class="portlet-content">
+      <FORM action="{% url "get-summary-attribute-form-from-url" %}" method="post">{% csrf_token %}
+	<span class="left">add</span>
+	<span class="right">
+	  <INPUT type="hidden" id="url" name="url" value="{% get_absolute_uri %}">
+	  <INPUT title="add attribute" type="submit" value="&#x21b5;"></span>
+      </FORM>
+    </div>
+  </div>
+  {% endif %}
+  {% endif %}
+
+  <!--  If the  data has  been filtered,  display the  applied  filters in
+	order, with option to adjust or remove each filter -->
+  {% if mdsnode.data.filter_history %}
+  <div class="portlet" id="mds-portlet-activefilters">
+    <div class="portlet-header">active filters</div>
+    <div class="portlet-content">
+      {% show_active_filters mdsnode %}
+    </div>
+  </div>
+  {% endif %}
+
+  <!-- List the views (H1DS views such as html, json, etc, not django view
+       functions) available for the node data type -->
+  <div class="portlet" id="mds-portlet-views">
+    <div class="portlet-header">views</div>
+    <div class="portlet-content">
+      {% for view_name in mdsnode.data.available_views %}{% show_view view_name %} {% endfor %}
+    </div>
+  </div>
+
+  <div class="portlet" id="mds-portlet-savedsignals">
+    <div class="portlet-header">my signals</div>
+    <div class="portlet-content">
+      {% if user.is_authenticated %}
+      <form method="post" action="{% url "h1ds-add-user-signal" %}">{% csrf_token %}
+	{{ user_signal_form.name }}
+	<INPUT type="hidden" id="url" name="url" value="{% get_absolute_uri %}">
+	<INPUT title="add" type="submit" value="+">
+      </form>
+      <div class="sidebar-section">
+      {% for sig in user_signals %}
+      <div class="sidebar-section-item">
+	{% if sig.is_fixed_to_shot %}
+	<a href="{% get_url_for_shot sig.url sig.shot %}">{{sig}}</a>[{{sig.shot}}]
+	{% else %}
+	<a href="{% get_url_for_shot sig.url mdsnode.shot %}">{{sig}}</a>
+	{% endif %}
+
+	<div class="sidebar-section-item-delete">
+	  <FORM action="{% url "h1ds-delete-user-signal" sig.pk %}" method="post">{% csrf_token %}
+	    <INPUT type="hidden" id="url" name="url" value="{% get_absolute_uri %}">
+	    <INPUT title="go to shot" type="submit" value="-">
+	  </FORM>
+	</div>
+	<div class="sidebar-section-item-edit">
+	  <a href="{% url "h1ds-update-user-signal" sig.pk %}?redirect_url={% get_absolute_uri %}">edit</a>
+	</div>
+
+      </div>
+      {% endfor %}
+      </div>
+      {% else %}
+      Log in to save and restore signals.
+      {% endif %}
+    </div>
+  </div>
+
+  <!--  List the filters  which can  be applied  to the  (possibly already
+	filtered) data -->
+  <div class="portlet" id="mds-portlet-filters">
+    <div class="portlet-header">filters</div>
+    <div class="portlet-content">
+      {% show_filters mdsnode %}
+    </div>
+  </div>
+</div>
+{% endblock content %}
+{% block rightpanel %}
+{% block mdsmeta %}{% endblock mdsmeta %}
+</div>
 {% endblock %}
-</div>
-{% endblock %}
-
-{% block mdsmeta %}
-<div class="mbox">
-{{dtype}}
-{{filtered_dtype}}
-{% if summary_dtype %}
-<div class="sidebarcontent">
-<FORM action="{% url "get-summary-attribute-form-from-url" %}" method="post">{% csrf_token %}
-    <span class="left">add to summary database</span>
-    <span class="right">
-    <INPUT type="hidden" id="url" name="url" value="{{absolute_uri|safe}}">
-    <INPUT title="add attribute" type="submit" value="&#x21b5;"></span>
- </FORM>
-</div>
-{% endif %}
-{% if filter_list %}
-<h3>applied filters</h3>{% for applied_filter in filter_list %}{{applied_filter|safe}}{% endfor %}
-{% endif %}
-<h3>views </h3>{% for node_view_name, node_view_link in f_node_views %}<a href="{{node_view_link}}">{{node_view_name}}</a> {% endfor %}
-<h3>filters</h3>{% for fdict in f_node_filters %}{{fdict.t|safe}}{% endfor%}
-</div>
-{% endblock mdsmeta%}
-
-
