--- a/h1ds_core/templates/h1ds_core/usersignal_form.html
+++ b/h1ds_core/templates/h1ds_core/usersignal_form.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_mdsplus/mdsplus_base.html" %}
+{% extends "h1ds_mdsplus/base_node.html" %}
 {% block mdscontent %}
 <form action="{% url "h1ds-update-user-signal" object.pk %}" method="post">{% csrf_token %}
 {{ form.as_p }}
@@ -6,4 +6,3 @@
 <input type="submit" value="Submit" />
 </form>
 {% endblock %}
-
