--- a/h1ds_core/templates/h1ds_core/cannot_find_latest_shot.html
+++ b/h1ds_core/templates/h1ds_core/cannot_find_latest_shot.html
@@ -1,6 +1,5 @@
-{% extends "h1ds_mdsplus/base_node.html" %}
+{% extends "h1ds_core/base_node.html" %}
 
 {% block node_data %}
 <p>Cannot find latest shot for this tree.</p>
-<p>Check that shotid.sys exists in your MDSplus tree path, and that it contains a shot number (binary, signed 32-bit integer) for which you have data files.</p>
 {% endblock %}
