--- a/h1ds_core/templates/h1ds_core/no_trees_found.html
+++ b/h1ds_core/templates/h1ds_core/no_trees_found.html
@@ -1,9 +1,9 @@
-{% extends "h1ds_mdsplus/base_node.html" %}
+{% extends "h1ds_core/base_node.html" %}
 
 {% block warning %}
 <div class="fixed-centre">
 <div class="mbox warning">
-<p>Cannot find any MDS trees, have you added any?</p>
+<p>Cannot find any data trees, have you added any?</p>
 </div>
 </div>
 {% endblock warning %}
