--- a/h1ds_core/templates/h1ds_core/unsupported_view.html
+++ b/h1ds_core/templates/h1ds_core/unsupported_view.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_mdsplus/base_node.html" %}
+{% extends "h1ds_core/base_node.html" %}
 
 {% block node_error %}
 <div class="warning">
