--- a/h1ds_core/templates/h1ds_core/usersignal_form.html
+++ b/h1ds_core/templates/h1ds_core/usersignal_form.html
@@ -1,5 +1,5 @@
-{% extends "h1ds_mdsplus/base_node.html" %}
-{% block mdscontent %}
+{% extends "h1ds_core/base_node.html" %}
+{% block node_data %}
 <form action="{% url "h1ds-update-user-signal" object.pk %}" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="hidden" id="redirect_url" name="redirect_url" value="{{ redirect_url }}">
