--- a/h1ds_core/templates/h1ds_core/base_node.html
+++ b/h1ds_core/templates/h1ds_core/base_node.html
@@ -58,7 +58,7 @@ HTML tables. -->
 	{% for a in node.get_ancestors %}
 	<li class="treenode"><a href="{{a.url_processor.get_url}}">{{ a.get_short_name }}</a><ul>
 	{% endfor %}
-	<li class="treenode current">{{ node.get_short_name }}
+	<li class="treenode"><span class="current">{{ node.get_short_name }}</span>
 	  <ul>
 	  {% for c in node.get_children %}
 	  <li> <a href="{{c.url_processor.get_url}}">{{ c.get_short_name }}</a> </li>
