--- a/h1ds_core/templates/h1ds_core/unsupported_format.html
+++ b/h1ds_core/templates/h1ds_core/unsupported_format.html
@@ -2,7 +2,7 @@
 
 {% block node_error %}
 <div class="warning">
-The requested view ({{requested_view}}) is not available for this data type ({{filtered_dtype}}).
+The requested format ({{requested_format}}) is not available for this data type ({{filtered_dtype}}).
 </div>
 {% endblock node_error %}
 
