use minified js

--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -64,8 +64,10 @@
 
 
   <!-- scripts concatenated and minified via ant build script-->
-  <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
-  <script defer src="{{ STATIC_URL }}js/script.js"></script>
+  <!-- <script defer src="{{ STATIC_URL }}js/plugins.js"></script> -->
+  <!-- <script defer src="{{ STATIC_URL }}js/script.js"></script> -->
+  <!-- minified js containing plugins.js and script.js -->
+  <script defer src="{{ STATIC_URL }}js/h1ds.min.js"></script>  
   <!-- end scripts-->
 
 	
