--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -63,11 +63,12 @@
   <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery-1.7.min.js"><\/script>')</script>
 
 
-  <!-- scripts concatenated and minified via ant build script-->
-  <!-- <script defer src="{{ STATIC_URL }}js/plugins.js"></script> -->
-  <!-- <script defer src="{{ STATIC_URL }}js/script.js"></script> -->
-  <!-- minified js containing plugins.js and script.js -->
-  <script defer src="{{ STATIC_URL }}js/h1ds.min.js"></script>  
+    {% if is_debug == "True" %}
+    <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
+    <script defer src="{{ STATIC_URL }}js/script.js"></script>
+    {% else %}
+    <script defer src="{{ STATIC_URL }}js/h1ds.min.js"></script>  
+    {% endif %}
   <!-- end scripts-->
 
 	
